# replacy_article_agreer

./: README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release.yml  test.yml
replacy_article_agreer/: __init__.py
tests/: test_replacy_article_agreer.py
