[tool.poetry]
name = "replacy-article-agreer"
version = "0.1.0"
description = ""
authors = ["Sam Havens <sam.havens@qordoba.com>"]

[tool.poetry.dependencies]
python = "^3.8"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#egg=en_core_web_sm==2.3.1" }
spacy = "^2.3.2"
inflect = "^4.1.0"
replacy = "^0.43.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
